--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -17,7 +17,17 @@ jobs:
       with:
         node-version: 18
 
-    - name: Build
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_FE_TOKEN }}
+
+    - name: Build the Docker image
       run: |
-        npm install
-        npm run build
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/houseofpizza-ui:latest .
+
+    - name: Push the Docker image to Docker Hub
+      run: |
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/houseofpizza-ui:latest
+
