--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,7 +2,7 @@ name: NodeJS with Webpack
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "feature/port-network-configuration" ]
 
 jobs:
   build:
